calling transceiver setCodecPreferences doesn't change the order of codecs in the offer/answer generated by the browser https://bugs.webkit.org/show_bug.cgi?id=215567 <rdar://problem/67277554>

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/webrtc/RTCRtpTransceiver-setCodecPreferences-expected.txt:
* web-platform-tests/webrtc/RTCRtpTransceiver-setCodecPreferences.html:

Source/WebCore:

Make sure to serialize sdpFmtp information so that setCodecPreferences succeeds.
Also make sure to throw the exception if there is any.

Covered by updated imported/w3c/web-platform-tests/webrtc/RTCRtpTransceiver-setCodecPreferences.html.

* Modules/mediastream/RTCRtpTransceiver.idl:
* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::toRTCRtpCapabilities):


Canonical link: https://commits.webkit.org/228910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266508 268f45cc-cd09-0410-ab3c-d52691b4dbfc